add test scripts

--- a/gen_dataset.ipynb
+++ b/gen_dataset.ipynb
@@ -19,14 +19,10 @@
    ],
    "source": [
     "import os\n",
-    "import h5py\n",
-    "import json\n",
+    "#import h5py\n",
+    "#import json\n",
     "import numpy as np\n",
     "import random\n",
-    "#from dataset.NMF import *\n",
-    "from dataset.NMF import audio_import\n",
-    "from ResNet import resnet101_keras\n",
-    "from ResNet.resnet101_keras import resnet101_model, resnet_predict\n",
     "#import scipy.io.wavfile\n",
     "#from scipy.io.wavfile import read\n",
     "#from scipy import signal\n",
@@ -47,6 +43,16 @@
     "#indexes2 = [[401], [402], [420], [486], [541], [546], [558], [566], [593], [594], [642], [579], [776], [875], [889]]\n",
     "#label = { k:v[0] for k,v in zip(indexes1,indexes2)}\n",
     "#print(label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## preprocess dataset\n",
+    "1. compute labels of images using ResNet101, and save the results as `*_labels.npy` files\n",
+    "2. compute NMF and save the result as `*_bases.npy` files\n",
+    "3. filepaths of `*_labels.npy`&`*_bases.npy` are stored in `train.h5`,`val.h5` and `test.h5`"
    ]
   },
   {
@@ -422,6 +428,11 @@
     }
    ],
    "source": [
+    "#from dataset.NMF import *\n",
+    "from dataset.NMF import audio_import\n",
+    "from ResNet import resnet101_keras\n",
+    "from ResNet.resnet101_keras import resnet101_model, resnet_predict\n",
+    "\n",
     "path = 'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/'\n",
     "dir_list = os.listdir(path)\n",
     "numOfTrain = 0\n",
@@ -480,11 +491,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generate `train.h5` and `val.h5`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import h5py\n",
+    "\n",
     "bases_encode = []\n",
     "labels_encode = []\n",
     "for i,j in zip(bases,labels):\n",
@@ -504,28 +524,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generate `test.h5`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"h5f = h5py.File('train.h5', 'w')\\nfor name in h5f['labels']:\\n    print(name)\\n    h5f['labels'] = str(name).encode()\\n    \\nh5f.close()\""
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bases\n",
+      "labels\n",
+      "[b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/accordion/AareFwTIg1s_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/acoustic_guitar/2K61zdPjAi8_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/banjo/PpJKo-JPVU0_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/cello/B1ixRtiUJ-U_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/drum/b98BJ36K1wo_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/electric_guitar/2BBAUwC1BI4_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/flute/_5w5TVK5B90_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/french_horn/chwqnnaiYXw_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/harmonica/5rjQU4vOIlw_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/harp/OiNlYrlJE4g_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/marimba/RFNRR78dh-8_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/piano/A2WdjyKQ57A_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/saxophone/D3f5VIJYR7M_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/trombone/9dx9IhSqwC4_bases.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/violin/CZZSQ6rd8h0_bases.npy']\n",
+      "[b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/accordion/AareFwTIg1s_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/acoustic_guitar/2K61zdPjAi8_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/banjo/PpJKo-JPVU0_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/cello/B1ixRtiUJ-U_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/drum/b98BJ36K1wo_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/electric_guitar/2BBAUwC1BI4_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/flute/_5w5TVK5B90_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/french_horn/chwqnnaiYXw_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/harmonica/5rjQU4vOIlw_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/harp/OiNlYrlJE4g_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/marimba/RFNRR78dh-8_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/piano/A2WdjyKQ57A_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/saxophone/D3f5VIJYR7M_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/trombone/9dx9IhSqwC4_labels.npy', b'e:/Study/Vision/project/Deep-MIML-Network/dataset/AudioSet-SingleSource/violin/CZZSQ6rd8h0_labels.npy']\n"
+     ]
     }
    ],
    "source": [
-    "'''h5f = h5py.File('train.h5', 'w')\n",
-    "for name in h5f['labels']:\n",
+    "import h5py\n",
+    "\n",
+    "h5f = h5py.File('dataset/train.h5', 'r')\n",
+    "test_bases = []\n",
+    "test_labels = []\n",
+    "\n",
+    "for name in h5f:\n",
     "    print(name)\n",
-    "    h5f['labels'] = str(name).encode()\n",
+    "    if name == 'bases':\n",
+    "        for v in h5f[name]:\n",
+    "            test_bases.append(v)\n",
+    "    if name == 'labels':\n",
+    "        for v in h5f[name]:\n",
+    "            test_labels.append(v)\n",
     "    \n",
-    "h5f.close()'''"
+    "h5f.close()\n",
+    "\n",
+    "#print(test_bases)\n",
+    "#print(test_labels)\n",
+    "\n",
+    "h5f = h5py.File('dataset/test.h5', 'w')\n",
+    "h5f.create_dataset('bases', data=test_bases[-3:])\n",
+    "h5f.create_dataset('labels', data=test_labels[-3:])\n",
+    "h5f.close()"
    ]
   },
   {
@@ -538,7 +583,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
