move feat_extractor.py and preprocess.py to util/ and fix a bug in preprocess.py

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,130 +143,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.96628118e+01 1.14671146e-03 4.29135547e-04 1.21046786e-04\n",
-      " 1.62240299e-03 4.02420901e-04 8.94150823e-04 2.92536615e-04]\n",
-      "[41639. 31178. 25732. 22913. 25359. 29263. 39276. 22865.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_1_saxophone_1_bases.npy\n",
+      "[41638. 28137. 23348. 26450. 21528. 29065. 38568. 18622.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_1_saxophone_1/labels.npy\n",
-      "[5.67647554e+00 1.92098907e+01 2.25566893e-02 1.15542082e-03\n",
-      " 3.09670911e-03 3.56995286e-03 1.24098510e-02 2.79464242e-02]\n",
-      "[44922. 23471. 49251. 33075. 29141. 43558. 36062. 47445.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_2_acoustic_guitar_2_bases.npy\n",
+      "[44184. 22514. 45354. 28776. 23004. 42053. 36036. 49654.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_2_acoustic_guitar_2/labels.npy\n",
-      "[2.99497473e+01 2.57470918e-03 2.64813239e-02 1.56515756e-04\n",
-      " 9.66574507e-04 1.09977279e-04 1.54362612e-03 4.05431414e-03]\n",
-      "[ 7218.  8681. 14898. 10493. 15633. 11106.  8446. 13478.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_2_cello_3_bases.npy\n",
+      "[ 7318. 10006. 16459. 11275. 19657. 10952.  7481. 12197.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_2_cello_3/labels.npy\n",
-      "[1.72320598e+01 7.85301381e+00 7.65816612e-02 7.38596086e-03\n",
-      " 6.35383234e-03 1.52668293e-02 3.09107262e-02 4.16273754e-02]\n",
-      "[40197. 43812. 37057. 35110. 40612. 40863. 43444. 34619.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_3_acoustic_guitar_3_bases.npy\n",
+      "[42947. 37449. 35432. 34241. 40664. 41247. 40478. 33705.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_3_acoustic_guitar_3/labels.npy\n",
-      "[8.43429127e+00 6.69102213e-03 3.88263779e-04 3.60335413e-01\n",
-      " 1.95209855e-01 1.18461282e-03 1.54801789e+01 8.36477142e-04]\n",
-      "[16627. 11786. 13300. 14564. 13065. 16534. 14055. 13501.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_4_saxophone_3_bases.npy\n",
+      "[16221. 12031. 14893. 13090. 11563. 16330. 13942. 12595.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_4_saxophone_3/labels.npy\n",
-      "[2.82597507e+01 8.45645558e-03 1.60661723e+00 4.32218610e-04\n",
-      " 4.30689934e-04 7.66206428e-05 3.26941192e-04 7.95981712e-02]\n",
-      "[32612. 27607. 23532. 34268. 32418. 31185. 32016. 26941.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_5_cello_1_bases.npy\n",
+      "[30113. 27039. 24987. 32208. 32384. 29942. 27369. 26171.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_5_cello_1/labels.npy\n",
-      "[2.94008859e+01 1.39322150e-03 7.96462791e-04 1.60470026e-02\n",
-      " 1.35287048e-02 9.21268837e-04 3.45441187e-01 4.80941411e-04]\n",
-      "[ 8473. 13031. 12968. 25056. 11490. 22967. 23121. 17889.]\n",
-      "h:/study/bpfile/testset25/gt_audio/accordion_6_saxophone_2_bases.npy\n",
+      "[11254. 16168. 14288. 23516. 14177. 22383. 22966. 27767.]\n",
       "h:/study/bpfile/testset25/testimage/accordion_6_saxophone_2/labels.npy\n",
-      "[4.48395425e-02 8.80525185e+00 8.41110614e+00 3.62201937e-03\n",
-      " 2.11254844e-03 3.18612949e-03 6.15100096e-03 1.07497744e+01]\n",
-      "[ 7557. 12524. 25364. 26256. 21188. 31244. 13941. 25625.]\n",
-      "h:/study/bpfile/testset25/gt_audio/acoustic_guitar_1_violin_2_bases.npy\n",
+      "[16209. 20243. 29032. 36223. 23102. 24569. 12941. 37013.]\n",
       "h:/study/bpfile/testset25/testimage/acoustic_guitar_1_violin_2/labels.npy\n",
-      "[7.11720199e-03 1.76875518e+01 6.23672951e-01 1.36959727e-03\n",
-      " 3.46892025e-02 7.17777562e-03 1.25438232e-03 4.86020412e+00]\n",
-      "[42251. 51265. 45201. 57977. 48960. 34849. 35123. 41997.]\n",
-      "h:/study/bpfile/testset25/gt_audio/acoustic_guitar_2_violin_1_bases.npy\n",
+      "[37100. 51022. 44369. 55322. 61343. 32247. 35826. 43856.]\n",
       "h:/study/bpfile/testset25/testimage/acoustic_guitar_2_violin_1/labels.npy\n",
-      "[8.83001817e-03 6.54383580e+00 7.38238513e-02 1.97272933e-01\n",
-      " 1.76920746e+01 1.04951712e-02 5.80729873e-02 5.19171611e-02]\n",
-      "[68632. 38837. 49140. 67128. 79736. 71677. 59241. 23156.]\n",
-      "h:/study/bpfile/testset25/gt_audio/acoustic_guitar_4_flute_2_bases.npy\n",
+      "[56747. 37141. 42949. 59703. 69396. 64895. 49706. 30740.]\n",
       "h:/study/bpfile/testset25/testimage/acoustic_guitar_4_flute_2/labels.npy\n",
-      "[1.11487331e-02 2.28349402e+01 9.27883812e-03 5.89354193e-03\n",
-      " 1.84184596e-03 1.14781712e-03 7.08671476e-03 3.78044827e-02]\n",
-      "[33490. 32822. 29661. 37290. 42206. 29070. 43877. 31686.]\n",
-      "h:/study/bpfile/testset25/gt_audio/acoustic_guitar_5_violin_3_bases.npy\n",
+      "[27313. 32918. 29959. 35768. 43725. 31362. 39750. 29372.]\n",
       "h:/study/bpfile/testset25/testimage/acoustic_guitar_5_violin_3/labels.npy\n",
-      "[0.04432684 7.31316587 0.32067884 0.31359945 1.87099549 0.08105956\n",
-      " 0.10412709 0.54942014]\n",
-      "[45352. 45697. 33581. 48067. 50231. 47781. 44130. 36803.]\n",
-      "h:/study/bpfile/testset25/gt_audio/acoustic_guitar_6_flute_3_bases.npy\n",
+      "[44923. 45968. 22139. 45538. 46829. 47059. 41627. 35649.]\n",
       "h:/study/bpfile/testset25/testimage/acoustic_guitar_6_flute_3/labels.npy\n",
-      "[2.02657336e-03 7.29710056e-02 1.34530095e+00 9.48638340e-03\n",
-      " 2.76606486e+01 2.59415641e-03 8.09231688e-04 2.73202590e-02]\n",
-      "[32300. 18704.  8196. 42622. 36150. 37637. 35741. 13474.]\n",
-      "h:/study/bpfile/testset25/gt_audio/cello_2_flute_2_bases.npy\n",
+      "[37934. 16427.  8977. 46501. 37428. 42910. 33954. 15040.]\n",
       "h:/study/bpfile/testset25/testimage/cello_2_flute_2/labels.npy\n",
-      "[9.03216226e-04 2.53547127e-03 2.66862492e+01 2.90813231e-03\n",
-      " 1.48274726e+00 1.27384175e-05 1.67464267e-04 2.81677415e-01]\n",
-      "[30081. 18472. 32191. 73745. 74007. 25385. 72462. 30113.]\n",
-      "h:/study/bpfile/testset25/gt_audio/cello_4_flute_5_bases.npy\n",
+      "[28634. 17186. 32434. 77464. 79871. 25897. 78371. 30753.]\n",
       "h:/study/bpfile/testset25/testimage/cello_4_flute_5/labels.npy\n",
-      "[9.71900325e-04 1.48557403e-04 1.05778762e-02 6.79844638e-04\n",
-      " 2.75621247e+01 1.99427604e+00 4.66336217e-04 3.29454900e-03]\n",
-      "[11956. 13778. 11356.  9810.  8843. 11040. 13977.  9614.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_1_xylophone_5_bases.npy\n",
+      "[13273. 12817.  9553.  9387.  8075. 11040. 16499. 10849.]\n",
       "h:/study/bpfile/testset25/testimage/flute_1_xylophone_5/labels.npy\n",
-      "[2.09802429e-06 2.69516534e-06 1.01733534e-05 4.17435598e-04\n",
-      " 2.99759847e+01 1.37298071e-05 2.74495029e-05 9.50966281e-06]\n",
-      "[19307. 20488. 18839. 23632. 15156. 17230. 18780. 12199.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_2_saxophone_1_bases.npy\n",
+      "[21086. 20587. 19157. 22714. 19322. 17687. 21208. 15129.]\n",
       "h:/study/bpfile/testset25/testimage/flute_2_saxophone_1/labels.npy\n",
-      "[8.39215653e-03 4.55437604e-03 6.01935064e-03 1.97005256e+00\n",
-      " 6.85257876e+00 2.28481614e-03 2.82545377e+00 4.36825939e-03]\n",
-      "[20876. 16931. 22932. 18312. 32002. 21867. 19082. 29840.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_3_saxophone_3_bases.npy\n",
+      "[20212. 16885. 18836. 17196. 31767. 23282. 21617. 29655.]\n",
       "h:/study/bpfile/testset25/testimage/flute_3_saxophone_3/labels.npy\n",
-      "[3.15293198e-03 6.57613864e-03 5.49066599e-03 1.04537998e+01\n",
-      " 6.27003594e-01 1.85564465e-03 7.94681507e-02 4.07610550e-03]\n",
-      "[29318. 46617. 51718. 27562. 28681. 31006. 26021. 42925.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_3_trumpet_5_bases.npy\n",
+      "[24075. 46827. 51974. 24869. 31273. 38949. 22329. 45916.]\n",
       "h:/study/bpfile/testset25/testimage/flute_3_trumpet_5/labels.npy\n",
-      "[1.45706483e-02 5.20912390e-03 2.06160899e-01 9.68666391e-02\n",
-      " 2.13761345e+01 3.74018457e-02 4.53230187e-03 8.56720948e-02]\n",
-      "[32992. 24932. 23160. 21887. 20512. 19680. 25896. 20782.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_3_xylophone_2_bases.npy\n",
+      "[30932. 23365. 23160. 20723. 19653. 20618. 25911. 17652.]\n",
       "h:/study/bpfile/testset25/testimage/flute_3_xylophone_2/labels.npy\n",
-      "[1.07028143e-02 7.18197353e-04 4.33225551e-04 1.49745630e+00\n",
-      " 3.29757060e-01 7.35126680e-04 2.62799392e+01 4.60957098e-04]\n",
-      "[19857. 31558. 21729. 39682.  4840. 26798. 37994.  9995.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_4_saxophone_2_bases.npy\n",
+      "[22622. 29398. 23760. 39682.  9333. 28005. 38690. 10570.]\n",
       "h:/study/bpfile/testset25/testimage/flute_4_saxophone_2/labels.npy\n",
-      "[3.68247169e-03 2.31903126e-03 3.53404123e-03 1.58241349e+01\n",
-      " 1.57958123e-01 9.52321900e-05 4.13268825e-02 3.27932685e-03]\n",
-      "[29890. 27593. 22199. 27512. 27037. 22896. 27297. 26428.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_4_trumpet_1_bases.npy\n",
+      "[28033. 26857. 21971. 27266. 27183. 25923. 27608. 27189.]\n",
       "h:/study/bpfile/testset25/testimage/flute_4_trumpet_1/labels.npy\n",
-      "[1.80824733e-02 1.72203333e-02 6.05168358e-02 6.91024980e-01\n",
-      " 2.61973838e+01 1.07106393e-03 2.58498949e-02 8.22215812e-02]\n",
-      "[23191. 20477.  9884. 23252. 20127. 25228. 23261. 15032.]\n",
-      "h:/study/bpfile/testset25/gt_audio/flute_5_trumpet_4_bases.npy\n",
+      "[24289. 21237. 10030. 23523. 17301. 22669. 24560. 14062.]\n",
       "h:/study/bpfile/testset25/testimage/flute_5_trumpet_4/labels.npy\n",
-      "[8.56284895e-04 3.52247022e-03 4.22568012e-01 3.45068021e-03\n",
-      " 1.39972958e-02 1.68820013e-02 1.85912093e-03 2.85851289e+01]\n",
-      "[44861. 53121. 52765. 52831. 54877. 47636. 43045. 54569.]\n",
-      "h:/study/bpfile/testset25/gt_audio/saxophone_1_violin_4_bases.npy\n",
+      "[43322. 54130. 57017. 51123. 50657. 42578. 43713. 55837.]\n",
       "h:/study/bpfile/testset25/testimage/saxophone_1_violin_4/labels.npy\n",
-      "[2.17091123e-01 1.24207029e-01 5.46650813e+00 1.18923233e-01\n",
-      " 4.04179588e-01 2.86909076e-03 2.75336131e+00 1.84030424e+01]\n",
-      "[28514. 30370. 27407. 18986. 16951. 25187. 18729. 25976.]\n",
-      "h:/study/bpfile/testset25/gt_audio/saxophone_2_violin_2_bases.npy\n",
+      "[21075. 35818. 28174. 19536. 17033. 27309. 19655. 27402.]\n",
       "h:/study/bpfile/testset25/testimage/saxophone_2_violin_2/labels.npy\n",
-      "[1.51529283e-02 1.29658582e-02 9.96408577e-03 9.01578721e-01\n",
-      " 1.29139686e-01 3.12021477e-03 2.29118317e+01 2.81276744e-02]\n",
-      "[18908. 12630. 10908. 21435. 17336. 11616. 17658.  8784.]\n",
-      "h:/study/bpfile/testset25/gt_audio/saxophone_3_violin_3_bases.npy\n",
+      "[18501.  9701. 10835. 22200. 12405. 12025. 17145.  8092.]\n",
       "h:/study/bpfile/testset25/testimage/saxophone_3_violin_3/labels.npy\n"
      ]
     }
@@ -276,7 +201,7 @@
     "import random\n",
     "import numpy as np\n",
     "from dataset.NMF import audio_import\n",
-    "from feat_extractor import load_model, get_CAM, feat_pred\n",
+    "from util.feat_extractor import load_model, get_CAM, feat_pred\n",
     "\n",
     "idxs=[401,402,486,513,558,642,776,889]\n",
     "names=['accordion','acoustic_guitar','cello','trumpet','flute','xylophone','saxophone','violin']\n",
@@ -320,14 +245,14 @@
     "# 计算 bases 和 labels\n",
     "for wav_fname, img_folder in zip(wav_files, img_files):\n",
     "    assert wav_fname[:-4] == img_folder    # 确保 wav 文件与图片文件夹相对应\n",
-    "    \n",
+    "    '''\n",
     "    # 计算 NMF 并将结果保存在 npy 文件中\n",
     "    # bases_filepath[0] = 'h:/Study/bpfile/testset25/testaudio/accordion_1_saxophone_1_bases.npy'\n",
     "    # np.array(nmf_base[0]).shape = (2401, 16)\n",
     "    nmf_base = audio_import.nmf([wav_dir+wav_fname])\n",
     "    np.save(wav_dir+wav_fname[:-4]+'_bases'+'.npy', nmf_base[0])\n",
     "    bases_filepath.append(wav_dir+wav_fname[:-4]+'_bases'+'.npy')\n",
-    "    \n",
+    "    '''\n",
     "    imgs = []\n",
     "    # 获得当前文件夹下所有图片（绝对）路径，并随机抽样\n",
     "    # img_folder = 'accordion_1_saxophone_1'\n",
@@ -356,15 +281,15 @@
     "        '''\n",
     "        \n",
     "    locations[img_folder+'.mp4'] = location\n",
-    "    print(probs)\n",
+    "    #print(probs)\n",
     "    print(location)\n",
     "    softmax = np.zeros(1000)\n",
-    "    for i in range(len(probs)):\n",
-    "        softmax[idxs[i]] = probs[i]\n",
-    "    np.save(img_dir+img_folder+'/labels'+'.npy', softmax)\n",
+    "    #for i in range(len(probs)):\n",
+    "    #    softmax[idxs[i]] = probs[i]\n",
+    "    #np.save(img_dir+img_folder+'/labels'+'.npy', softmax)\n",
     "    labels_filepath.append(img_dir+img_folder+'/labels'+'.npy')\n",
     "    \n",
-    "    print(bases_filepath[-1])\n",
+    "    #print(bases_filepath[-1])\n",
     "    print(labels_filepath[-1])\n",
     "    "
    ]
@@ -392,13 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import json\n",
     "\n",
-    "np.save('dataset/locations'+'.npy', locations)"
+    "for k in locations.keys():\n",
+    "    locations[k] = list(locations[k])\n",
+    "\n",
+    "with open('dataset/locations.json','w') as f:\n",
+    "    json.dump(locations, f)"
    ]
   },
   {
