trainable and testable on our dataset, source seperation and location both reachable

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -336,6 +336,187 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "path = 'h:study/bpfile/testset25/Result_sep/'\n",
+    "for file in os.listdir(path):\n",
+    "    os.rename(os.path.join(path,file),os.path.join(path,file[8:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0],\n",
+       " [11.347610961650894,\n",
+       "  -9.632960200620044,\n",
+       "  8.70021952059402,\n",
+       "  2.5079513008718477,\n",
+       "  9.652218240462485,\n",
+       "  -0.1527975835486499,\n",
+       "  2.0595129473305334,\n",
+       "  5.1103995341998925,\n",
+       "  1.561645286855171,\n",
+       "  -1.313358260349896,\n",
+       "  0.9039634811239038,\n",
+       "  12.656031646268426,\n",
+       "  -13.439097840668804,\n",
+       "  8.627718589954496,\n",
+       "  -8.30973963605447,\n",
+       "  7.548450334721046,\n",
+       "  2.0754457673556868,\n",
+       "  3.9472773987273646,\n",
+       "  2.4069430738422453,\n",
+       "  1.534099362765119,\n",
+       "  -1.4902245012246584,\n",
+       "  4.6937194856242614,\n",
+       "  2.605547560421433,\n",
+       "  4.373700425100127,\n",
+       "  9.875911990888353,\n",
+       "  -8.932793377600113,\n",
+       "  -7.911671922013421,\n",
+       "  6.714576715646839,\n",
+       "  2.952031236943138,\n",
+       "  -4.591842359176853,\n",
+       "  -3.664687551573451,\n",
+       "  2.461675985931538,\n",
+       "  -0.4154217807845178,\n",
+       "  3.641413631044385,\n",
+       "  -6.275929831730655,\n",
+       "  10.901451073989607,\n",
+       "  4.391146147909199,\n",
+       "  -5.780470227883133,\n",
+       "  6.2859942439767735,\n",
+       "  -1.4655790234925066,\n",
+       "  -0.03865087571590465,\n",
+       "  -1.7699167771162454,\n",
+       "  -11.366997010864136,\n",
+       "  14.822491686259596,\n",
+       "  2.4814621671509456,\n",
+       "  -0.5059430078344603,\n",
+       "  8.13116251910653,\n",
+       "  -4.994748791387616,\n",
+       "  6.488218187777051,\n",
+       "  -0.03958338260151157])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Evaluate import Evaluate\n",
+    "Evaluate('H:/Study/bpfile/testset25/result_json','H:/Study/bpfile/testset25/Result_sep','H:/Study/bpfile/testset25/gt_audio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "1.5873515312450368\n"
+     ]
+    }
+   ],
+   "source": [
+    "accur = [1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0]\n",
+    "snr = [11.347610961650894,\n",
+    "  -9.632960200620044,\n",
+    "  8.70021952059402,\n",
+    "  2.5079513008718477,\n",
+    "  9.652218240462485,\n",
+    "  -0.1527975835486499,\n",
+    "  2.0595129473305334,\n",
+    "  5.1103995341998925,\n",
+    "  1.561645286855171,\n",
+    "  -1.313358260349896,\n",
+    "  0.9039634811239038,\n",
+    "  12.656031646268426,\n",
+    "  -13.439097840668804,\n",
+    "  8.627718589954496,\n",
+    "  -8.30973963605447,\n",
+    "  7.548450334721046,\n",
+    "  2.0754457673556868,\n",
+    "  3.9472773987273646,\n",
+    "  2.4069430738422453,\n",
+    "  1.534099362765119,\n",
+    "  -1.4902245012246584,\n",
+    "  4.6937194856242614,\n",
+    "  2.605547560421433,\n",
+    "  4.373700425100127,\n",
+    "  9.875911990888353,\n",
+    "  -8.932793377600113,\n",
+    "  -7.911671922013421,\n",
+    "  6.714576715646839,\n",
+    "  2.952031236943138,\n",
+    "  -4.591842359176853,\n",
+    "  -3.664687551573451,\n",
+    "  2.461675985931538,\n",
+    "  -0.4154217807845178,\n",
+    "  3.641413631044385,\n",
+    "  -6.275929831730655,\n",
+    "  10.901451073989607,\n",
+    "  4.391146147909199,\n",
+    "  -5.780470227883133,\n",
+    "  6.2859942439767735,\n",
+    "  -1.4655790234925066,\n",
+    "  -0.03865087571590465,\n",
+    "  -1.7699167771162454,\n",
+    "  -11.366997010864136,\n",
+    "  14.822491686259596,\n",
+    "  2.4814621671509456,\n",
+    "  -0.5059430078344603,\n",
+    "  8.13116251910653,\n",
+    "  -4.994748791387616,\n",
+    "  6.488218187777051,\n",
+    "  -0.03958338260151157]\n",
+    "\n",
+    "print(sum(accur))\n",
+    "print(sum(snr)/len(snr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "for i in range(len(snr)):\n",
+    "    cnt = cnt + int(snr[i]>0)\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
