improve nmf computation speed, and make classification by segment in test to improve accuracy of location

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -339,78 +339,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.8531398e-08, 4.203821e-10, 3.0119654e-07, 1.6685843e-09, 7.592569e-08, 0.58534557, 4.232982e-09, 8.99717e-09]\n",
+      "left  [3.3698166e-06, 1.5242497e-08, 1.61589e-05, 3.455999e-08, 1.1760211e-07, 2.40524e-06, 2.1710822e-08, 2.5602446e-06]\n",
+      "right  [2.5203516e-08, 9.114263e-12, 1.9799065e-09, 6.485805e-11, 5.8738996e-09, 0.11121938, 1.4527327e-10, 1.1737265e-10]\n",
+      "[0, 0, 1, 0, 0, 2, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "path = 'h:study/bpfile/testset25/Result_sep/'\n",
-    "for file in os.listdir(path):\n",
-    "    os.rename(os.path.join(path,file),os.path.join(path,file[8:]))"
+    "from util import feat_extractor\n",
+    "from util.feat_extractor import feat_pred, feat_pred_by_seg, load_model\n",
+    "\n",
+    "load_model()\n",
+    "img_dir = '.'\n",
+    "imgname = '000053.jpg'\n",
+    "\n",
+    "print(feat_pred(img_dir,imgname))\n",
+    "left,right = feat_pred_by_seg(img_dir,imgname)\n",
+    "print('left ', left)\n",
+    "print('right ', right)\n",
+    "\n",
+    "position = [0]*8\n",
+    "left_max = max(left)\n",
+    "right_max = max(right)\n",
+    "if left_max > right_max:\n",
+    "    position[left.index(left_max)] = 1      # 确定左侧乐器种类\n",
+    "    right[left.index(left_max)] = 0\n",
+    "    position[right.index(max(right))] = 2   # 确定右侧乐器种类\n",
+    "else:\n",
+    "    position[right.index(right_max)] = 2    # 确定右侧乐器种类\n",
+    "    left[right.index(right_max)] = 0\n",
+    "    position[left.index(max(left))] = 1     # 确定左侧乐器种类\n",
+    "print(position)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0],\n",
-       " [11.347610961650894,\n",
-       "  -9.632960200620044,\n",
-       "  8.70021952059402,\n",
-       "  2.5079513008718477,\n",
-       "  9.652218240462485,\n",
-       "  -0.1527975835486499,\n",
-       "  2.0595129473305334,\n",
-       "  5.1103995341998925,\n",
-       "  1.561645286855171,\n",
-       "  -1.313358260349896,\n",
-       "  0.9039634811239038,\n",
-       "  12.656031646268426,\n",
-       "  -13.439097840668804,\n",
-       "  8.627718589954496,\n",
-       "  -8.30973963605447,\n",
-       "  7.548450334721046,\n",
-       "  2.0754457673556868,\n",
-       "  3.9472773987273646,\n",
-       "  2.4069430738422453,\n",
-       "  1.534099362765119,\n",
-       "  -1.4902245012246584,\n",
-       "  4.6937194856242614,\n",
-       "  2.605547560421433,\n",
-       "  4.373700425100127,\n",
-       "  9.875911990888353,\n",
-       "  -8.932793377600113,\n",
-       "  -7.911671922013421,\n",
-       "  6.714576715646839,\n",
-       "  2.952031236943138,\n",
-       "  -4.591842359176853,\n",
-       "  -3.664687551573451,\n",
-       "  2.461675985931538,\n",
-       "  -0.4154217807845178,\n",
-       "  3.641413631044385,\n",
-       "  -6.275929831730655,\n",
-       "  10.901451073989607,\n",
-       "  4.391146147909199,\n",
-       "  -5.780470227883133,\n",
-       "  6.2859942439767735,\n",
-       "  -1.4655790234925066,\n",
-       "  -0.03865087571590465,\n",
-       "  -1.7699167771162454,\n",
-       "  -11.366997010864136,\n",
-       "  14.822491686259596,\n",
-       "  2.4814621671509456,\n",
-       "  -0.5059430078344603,\n",
-       "  8.13116251910653,\n",
-       "  -4.994748791387616,\n",
-       "  6.488218187777051,\n",
-       "  -0.03958338260151157])"
+       "([1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [11.025667273241673,\n",
+       "  -8.616144398241026,\n",
+       "  8.70033389108073,\n",
+       "  2.5079283361029905,\n",
+       "  9.652112032056358,\n",
+       "  -0.15310698486073632,\n",
+       "  2.05947453003453,\n",
+       "  5.1101977566897325,\n",
+       "  1.562369217599937,\n",
+       "  -1.3130846512270777,\n",
+       "  0.9041050961813324,\n",
+       "  12.655941904901958,\n",
+       "  -13.438770299126723,\n",
+       "  8.627968336798402,\n",
+       "  -8.309988122393,\n",
+       "  7.548632691892022,\n",
+       "  2.0753651542099916,\n",
+       "  3.9472065291720515,\n",
+       "  2.407020892892854,\n",
+       "  1.5340932165582575,\n",
+       "  -1.489769209593552,\n",
+       "  4.694007757740754,\n",
+       "  0.7759560881044568,\n",
+       "  3.236182103382213,\n",
+       "  9.875781822568525,\n",
+       "  -8.932016372898001,\n",
+       "  -7.911161286186349,\n",
+       "  6.71525418993304,\n",
+       "  3.171514461085306,\n",
+       "  -4.228833308769227,\n",
+       "  -3.532583959722861,\n",
+       "  2.446789310157182,\n",
+       "  -0.4158362013207336,\n",
+       "  3.6410206480297926,\n",
+       "  -7.14992673159284,\n",
+       "  10.78672873386352,\n",
+       "  4.3889315979614345,\n",
+       "  -5.781894478256094,\n",
+       "  6.211971539542357,\n",
+       "  -1.0298283188974704,\n",
+       "  -0.04018120965681371,\n",
+       "  -1.7705561093021722,\n",
+       "  -11.368012914148942,\n",
+       "  14.822047305213744,\n",
+       "  2.481380517704754,\n",
+       "  -0.5060000788044992,\n",
+       "  9.136656160609991,\n",
+       "  -3.96703800321657,\n",
+       "  6.488657374146306,\n",
+       "  -0.03982178185451063])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,6 +466,7 @@
     }
    ],
    "source": [
+    "# 2018/12/31 01:00\n",
     "accur = [1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0]\n",
     "snr = [11.347610961650894,\n",
     "  -9.632960200620044,\n",
@@ -505,6 +537,80 @@
     }
    ],
    "source": [
+    "cnt = 0\n",
+    "for i in range(len(snr)):\n",
+    "    cnt = cnt + int(snr[i]>0)\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5839348409877392\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2018/12/31 11:00\n",
+    "snr = [11.025667273241673,\n",
+    "  -8.616144398241026,\n",
+    "  8.70033389108073,\n",
+    "  2.5079283361029905,\n",
+    "  9.652112032056358,\n",
+    "  -0.15310698486073632,\n",
+    "  2.05947453003453,\n",
+    "  5.1101977566897325,\n",
+    "  1.562369217599937,\n",
+    "  -1.3130846512270777,\n",
+    "  0.9041050961813324,\n",
+    "  12.655941904901958,\n",
+    "  -13.438770299126723,\n",
+    "  8.627968336798402,\n",
+    "  -8.309988122393,\n",
+    "  7.548632691892022,\n",
+    "  2.0753651542099916,\n",
+    "  3.9472065291720515,\n",
+    "  2.407020892892854,\n",
+    "  1.5340932165582575,\n",
+    "  -1.489769209593552,\n",
+    "  4.694007757740754,\n",
+    "  0.7759560881044568,\n",
+    "  3.236182103382213,\n",
+    "  9.875781822568525,\n",
+    "  -8.932016372898001,\n",
+    "  -7.911161286186349,\n",
+    "  6.71525418993304,\n",
+    "  3.171514461085306,\n",
+    "  -4.228833308769227,\n",
+    "  -3.532583959722861,\n",
+    "  2.446789310157182,\n",
+    "  -0.4158362013207336,\n",
+    "  3.6410206480297926,\n",
+    "  -7.14992673159284,\n",
+    "  10.78672873386352,\n",
+    "  4.3889315979614345,\n",
+    "  -5.781894478256094,\n",
+    "  6.211971539542357,\n",
+    "  -1.0298283188974704,\n",
+    "  -0.04018120965681371,\n",
+    "  -1.7705561093021722,\n",
+    "  -11.368012914148942,\n",
+    "  14.822047305213744,\n",
+    "  2.481380517704754,\n",
+    "  -0.5060000788044992,\n",
+    "  9.136656160609991,\n",
+    "  -3.96703800321657,\n",
+    "  6.488657374146306,\n",
+    "  -0.03982178185451063]\n",
+    "\n",
+    "print(sum(snr)/len(snr))\n",
     "cnt = 0\n",
     "for i in range(len(snr)):\n",
     "    cnt = cnt + int(snr[i]>0)\n",
